GUI automatically adujusts for js and non-js users, uses AJAX if enabled

--- a/tests/gui/default.css
+++ b/tests/gui/default.css
@@ -23,12 +23,15 @@ body, html {
     position:relative;
     width:960px;
 }
-#results {
+#resultswrapper {
     float:right;
+	overflow:visible;
     width:480px;
 }
+#simpleresults {
+}
 #advresults {
-    float:left;
+    float:right;
     margin-top:50px;
 }
 .right {
