--- a/tests/gui/default.css
+++ b/tests/gui/default.css
@@ -106,6 +106,11 @@ fieldset {
     font:underline Verdana, Geneva, sans-serif;
     color:#006;
 }
+.disabled {
+	color:#69C;
+	font:14px italic Verdana, Geneva, sans-serif;
+	margin:0 auto;
+}
 /* Specific Tables */
 table {
     border-collapse: collapse;
